# opengl_test

./: CMakeLists.txt  index_buffer.cc  index_buffer.h  main.cc  main1.cc  main2.cc  render.cc  render.h  shader.cc  shader.frag  shader.h  shader.vs  texture_load.cc  texture_load.h  transform_test.cc  vertex_array.h  vertex_buffer_layout.h
example/: main2.cc  shader.frag  transform_test.cc
src/: camera.cc  camera.h  const_data.h  gl_util.cc  gl_util.h  mat_util.cc  mat_util.h  render.cc  render.h  shader.cc  shader.h  vertex_array.cc  vertex_array.h  vertex_buffer.cc  vertex_buffer.h  vertex_buffer_layout.h  windows.cc  windows.h
